# recoder-android

./: .gitmodules  pom.xml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/sabinetek/noise/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sabinetek/noise/: MainActivity.kt
app/src/main/java/com/sabinetek/noise/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/sabinetek/noise/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
recorder/: build.gradle.kts  fix_aac.sh
recorder/src/androidTest/java/com/sabinetek/recorder/: ExampleInstrumentedTest.kt
recorder/src/main/cpp/: CMakeLists.txt  recorder.cpp
recorder/src/main/cpp/recorder/: AudioEncoder.h  AudioFileEncoder.cpp  AudioFileEncoder.h  AudioStreamCallback.h  Codec.h  FormatConverterBox.cpp  FormatConverterBox.h  RecorderCodec.h  RecorderOboeEngine.cpp  RecorderOboeEngine.h
recorder/src/main/cpp/recorder/codec/: AACEncoder.cpp  AACEncoder.h  AudioCodec.h  FlacEncoder.cpp  FlacEncoder.h  WavCodec.cpp  WavCodec.h
recorder/src/main/java/com/sabinetek/recorder/: AudioRecorder.kt  NativeLib.kt
recorder/src/test/java/com/sabinetek/recorder/: ExampleUnitTest.kt
